# data-engineering-dbt-spark

./: .gitignore  Delta-lake.ipynb  README.md  docker-compose.yml  pyproject.toml
dbt-spark/: dbt_project.yml  profiles.yml
dbt-spark/models/example/: ast_brand_revenue.sql  ast_product_viewed.sql  rfn_ecommerce.sql  sources.yml
dbt/dbtSpark/: .user.yml  profiles.yml
docker/: Dockerfile  hive-site.xml  spark-defaults.conf
