[tool.poetry]
name = "delta-lake"
version = "0.1.0"
description = ""
authors = ["Pee Tankulrat <ptankulrat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt = "^1.0.0.36.9"
pyspark = {extras = ["connect"], version = "^3.5.1"}
delta-spark = "^3.1.0"
dbt-spark = {extras = ["pyhive"], version = "^1.7.1"}
pyspark-pandas = "^0.0.7"
pyarrow = "^15.0.1"
grpcio = "^1.62.1"
grpcio-status = "^1.62.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
